--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + React + TS</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/@csstools/normalize.css@12.0.0/normalize.min.css" rel="stylesheet" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/reset.css@2.0.2/reset.min.css" rel="stylesheet" />
   </head>
 
   <body>
